deploy: andrealexandre/github-pages@a3910b2613a0836836f71b935739c69588fa5eb9

--- a/index.html
+++ b/index.html
@@ -55,5 +55,7 @@ André Alexandre
 </footer>
 </div>
 <script>'addEventListener'in window&&(window.addEventListener('load',function(){document.body.className=document.body.className.replace(/\bis-loading\b/,'')}),document.body.className+=navigator.userAgent.match(/(MSIE|rv:11\.0)/)?' is-ie':'')</script>
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-VRPFE1NHC8','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
 </body>
 </html>
