deploy: andrealexandre/github-pages@80cb815914324d577292d84a8852f47d4b76b969

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <link rel=stylesheet href=/assets/css/main.css>
 <link rel=stylesheet href=/assets/css/page.css>
 <link rel=stylesheet href=/assets/css/font-awesome.min.css>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VRPFE1NHC8"></script>
+<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-VRPFE1NHC8')</script>
 <noscript><link rel=stylesheet href=/assets/css/noscript.css></noscript>
 </head>
 <body class=is-loading>
@@ -55,7 +57,5 @@ André Alexandre
 </footer>
 </div>
 <script>'addEventListener'in window&&(window.addEventListener('load',function(){document.body.className=document.body.className.replace(/\bis-loading\b/,'')}),document.body.className+=navigator.userAgent.match(/(MSIE|rv:11\.0)/)?' is-ie':'')</script>
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-VRPFE1NHC8','auto'),ga('send','pageview'))</script>
-<script async src=https://www.google-analytics.com/analytics.js></script>
 </body>
 </html>
